force-app/main/default/objects/Diaco_EmailConfigurationCupon__mdt/Diaco_EmailConfigurationCupon__mdt.object-meta.xml
<CustomObject>
    <label>Email Configuration Cupon</label>
    <pluralLabel>Emails Configuration Cupon</pluralLabel>
</CustomObject>