force-app/main/default/objects/Diaco_EmailConfigurationCupon__mdt/fields/Diaco_EmailRecipient__c.field-meta.xml
<CustomField>
    <fullName>Diaco_EmailRecipient__c</fullName>
    <description>Store the email for recipient</description>
    <label>Email recipient</label>
    <type>Email</type>
</CustomField>