force-app/main/default/objects/Diaco_EmailConfigurationCupon__mdt/fields/Diaco_PercentTrigger__c.field-meta.xml
<CustomField>
    <fullName>Diaco_PercentTrigger__c</fullName>
    <description>Store the percent trigger in order to sent the notification</description>
    <label>Percent Trigger</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>