force-app/main/default/objects/Diaco_EmailConfigurationCupon__mdt/fields/Diaco_RecordType__c.field-meta.xml
<CustomField>
    <fullName>Diaco_RecordType__c</fullName>
    <label>RecordType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EmailRecipient</fullName>
                <default>true</default>
                <label>EmailRecipient</label>
            </value>
            <value>
                <fullName>EmailProperties</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>